syntax = "proto3";

package account.auth.v1;

import "account/model/v1/user.proto";

option go_package = "github.com/iput-kernel/foundation-account/internal/pb/account/auth/v1;accountv1";

message CreateUserRequest {
  string email = 1;
  string username = 2;
  string password = 3;
}

message CreateUserResponse {
  account.model.v1.User user = 1;
}
